k8s/ema-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ema-api-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: ema-api.infres.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ema-api-service
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ema-api-service
  labels:
    run: ema-api
spec:
  selector:
    app: ema-api
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ema-api
  labels:
    app: ema-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ema-api
  template:
    metadata:
      labels:
        app: ema-api
    spec:
      containers:
        - name: ema-api
          image: registry.infres.fr/ema-api
          imagePullPolicy: Always
          command: ["node", "dist/main"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
